# serializer version: 1
# name: test_process_scan_both
  '''
                    image_size_x_m  image_size_y_m  image_area_m2  image_size_x_px  image_size_y_px  image_area_px2  grains  grains_per_m2  rms_roughness
  image                                                                                                                                                  
  minicircle_small      1.2646e-07      1.2646e-07     1.5993e-14               64               64            4096       3     1.8758e+14     6.8208e-10
  '''
# ---
# name: test_process_scan_both.1
  '''
                                centre_x   centre_y  radius_min  radius_max  radius_mean  radius_median  height_min  height_max  height_median  height_mean     volume       area  area_cartesian_bbox  smallest_bounding_width  smallest_bounding_length  smallest_bounding_area  aspect_ratio  max_feret  min_feret  num_crossings  mean_crossing_confidence  min_crossing_confidence  num_mols writhe_string             image                                                                               basename
  grain_number class subgrain                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           
  0            1     0        8.7079e-08 3.5579e-08  3.9431e-09  2.5631e-08   1.6016e-08     1.6680e-08  9.1991e-10  2.6422e-09     1.5338e-09   1.5341e-09 1.0543e-24 6.8721e-16           1.3198e-15               2.0539e-08                5.0379e-08              1.0347e-15    4.0769e-01 5.0379e-08 2.0539e-08     1.0000e+00                       NaN                      NaN         2                minicircle_small  /home/neil/work/git/hub/AFM-SPM/TopoStats/tests/resources/test_image/minicircle_small
  1            1     0        8.6581e-08 7.2337e-08  6.8951e-09  2.7188e-08   1.6272e-08     1.6263e-08  9.0630e-10  2.4586e-09     1.6144e-09   1.6264e-09 1.0352e-24 6.3645e-16           1.5931e-15               2.0174e-08                5.1212e-08              1.0332e-15    3.9394e-01 5.1262e-08 2.0174e-08            NaN                       NaN                      NaN         1            NA  minicircle_small  /home/neil/work/git/hub/AFM-SPM/TopoStats/tests/resources/test_image/minicircle_small
  2            1     0        3.8100e-08 7.7556e-08  9.9461e-09  2.3654e-08   1.7561e-08     1.8364e-08  9.0641e-10  2.1066e-09     1.5939e-09   1.5493e-09 1.1192e-24 7.2236e-16           1.5462e-15               3.3592e-08                4.1496e-08              1.3940e-15    8.0952e-01 4.4405e-08 3.2528e-08            NaN                       NaN                      NaN         1            NA  minicircle_small  /home/neil/work/git/hub/AFM-SPM/TopoStats/tests/resources/test_image/minicircle_small
  '''
# ---
# name: test_run_nodestats[catenane]
  MatchedBranch(ordered_coords=array([[ 33, 182],
         [ 33, 183],
         [ 33, 184],
         [ 32, 185],
         [ 31, 186],
         [ 30, 187],
         [ 29, 188],
         [ 28, 189],
         [ 28, 190],
         [ 27, 191],
         [ 27, 192],
         [ 26, 193],
         [ 26, 194],
         [ 26, 195],
         [ 27, 196],
         [ 27, 197],
         [ 27, 198],
         [ 27, 199],
         [ 27, 200],
         [ 27, 201],
         [ 28, 202],
         [ 29, 203],
         [ 30, 204],
         [ 30, 205],
         [ 31, 206],
         [ 32, 207],
         [ 33, 208],
         [ 34, 209],
         [ 35, 210],
         [ 36, 211],
         [ 36, 212],
         [ 37, 213],
         [ 38, 214],
         [ 39, 214],
         [ 40, 215],
         [ 40, 216],
         [ 41, 217],
         [ 42, 218],
         [ 43, 219],
         [ 44, 219],
         [ 45, 219],
         [ 46, 219],
         [ 47, 219],
         [ 48, 220],
         [ 49, 220],
         [ 50, 220],
         [ 51, 220],
         [ 52, 220],
         [ 53, 220],
         [ 54, 220],
         [ 55, 220],
         [ 56, 220],
         [ 57, 220],
         [ 58, 219],
         [ 59, 219],
         [ 60, 219],
         [ 61, 219],
         [ 62, 219],
         [ 63, 219],
         [ 64, 218],
         [ 65, 218],
         [ 66, 218],
         [ 67, 218],
         [ 68, 217],
         [ 69, 216],
         [ 70, 216],
         [ 71, 215],
         [ 72, 215],
         [ 73, 215],
         [ 74, 215],
         [ 75, 214],
         [ 76, 213],
         [ 77, 213],
         [ 78, 212]]), heights=array([2.5183544 , 2.57737582, 2.5844211 , 2.55589625, 2.52808899,
         2.53866089, 2.51837313, 2.50418248, 2.46880248, 2.44348411,
         2.43279375, 2.38206152, 2.16332578, 1.99290574, 1.86272916,
         1.80256288, 1.82941261, 1.95629099, 2.16615922, 2.21131182,
         2.1881459 , 2.23088335, 2.35948293, 2.44454144, 2.58177528,
         2.83139104, 3.12173709, 3.34521451, 3.436503  , 3.62250572,
         3.77433198, 3.82415798, 3.88039243, 3.89330504, 3.76781358,
         3.44441686, 3.03341516, 2.85376777, 2.69821715, 2.52457321,
         2.41043132, 2.30546955, 2.26373093, 2.29837863, 2.34159702,
         2.37275231, 2.37032841, 2.34256584, 2.31659506, 2.30819312,
         2.29291208, 2.31351377, 2.40757692, 2.46407633, 2.50061137,
         2.51129756, 2.49656309, 2.52071411, 2.58801773, 2.62235872,
         2.58883477, 2.55293655, 2.42594857, 2.36051937, 2.33664339,
         2.37145331, 2.45575947, 2.55817315, 2.72771105, 2.63335842]), distances=array([-31.78049716, -31.04834939, -30.3644529 , -29.73213749,
         -29.15475947, -28.63564213, -27.73084925, -27.29468813,
         -26.41968963, -26.07680962, -25.23885893, -24.41311123,
         -23.02172887, -22.20360331, -21.40093456, -20.61552813,
         -19.84943324, -19.10497317, -17.69180601, -16.2788206 ,
         -14.86606875, -14.14213562, -12.72792206, -11.3137085 ,
          -9.89949494,  -8.48528137,  -7.07106781,  -5.65685425,
          -5.        ,  -3.60555128,  -2.23606798,  -1.41421356,
           0.        ,   1.        ,   2.23606798,   3.60555128,
           5.        ,   5.65685425,   6.40312424,   7.21110255,
           8.06225775,   9.43398113,  10.29563014,  11.18033989,
          12.08304597,  13.        ,  13.92838828,  14.86606875,
          15.8113883 ,  16.76305461,  17.72004515,  18.43908891,
          19.41648784,  20.39607805,  21.37755833,  22.36067977,
          23.34523506,  24.18677324,  25.17935662,  26.17250466,
          27.16615541,  28.0713377 ,  29.01723626,  30.01666204,
          31.        ,  32.        ,  33.        ,  34.        ,
          35.0142828 ,  36.05551275]), fwhm=11.965807313062903, fwhm_half_maxs=[-7.185651653257178, 4.780155659805724, 3.0982123778764734], fwhm_peaks=[33.0, 1.0, 3.893305038040481], angles=0.0, branch_statistics=None)
# ---
# name: test_run_nodestats[catenane].1
  False
# ---
# name: test_run_nodestats[catenane].2
  dict({
    0: UnMatchedBranch(angles=0.0),
    1: UnMatchedBranch(angles=81.61452802253662),
    2: UnMatchedBranch(angles=122.66472408389575),
    3: UnMatchedBranch(angles=164.82482856964234),
  })
# ---
# name: test_run_nodestats[rep int]
  MatchedBranch(ordered_coords=array([[ 35, 149],
         [ 36, 149],
         [ 37, 149],
         [ 38, 150],
         [ 39, 150],
         [ 40, 151],
         [ 41, 151],
         [ 42, 151],
         [ 43, 151],
         [ 44, 151],
         [ 45, 151],
         [ 46, 152],
         [ 47, 152],
         [ 48, 152],
         [ 49, 153],
         [ 50, 154],
         [ 51, 154],
         [ 52, 154],
         [ 53, 155],
         [ 54, 155],
         [ 55, 156],
         [ 56, 156],
         [ 57, 156],
         [ 58, 156],
         [ 59, 156],
         [ 60, 157],
         [ 61, 157],
         [ 62, 157],
         [ 63, 157],
         [ 64, 157],
         [ 65, 157],
         [ 66, 157],
         [ 67, 158],
         [ 68, 158],
         [ 69, 158],
         [ 70, 158],
         [ 71, 158],
         [ 72, 158],
         [ 73, 159],
         [ 74, 158],
         [ 75, 159],
         [ 76, 160],
         [ 77, 160],
         [ 78, 160],
         [ 79, 161],
         [ 80, 161],
         [ 81, 161],
         [ 82, 162],
         [ 83, 163],
         [ 84, 164],
         [ 85, 165],
         [ 85, 166],
         [ 85, 167],
         [ 86, 168],
         [ 86, 169],
         [ 86, 170],
         [ 86, 171],
         [ 87, 172],
         [ 88, 173],
         [ 88, 174],
         [ 89, 175],
         [ 89, 176],
         [ 90, 177],
         [ 91, 178],
         [ 91, 179],
         [ 91, 180],
         [ 92, 181],
         [ 92, 182],
         [ 92, 183],
         [ 92, 184],
         [ 93, 185],
         [ 93, 186],
         [ 93, 187],
         [ 93, 188],
         [ 93, 189]]), heights=array([2.13170185, 2.16828175, 2.18915553, 2.33270282, 2.35610101,
         2.09070047, 2.13967484, 2.20562769, 2.27269809, 2.27767211,
         2.19568794, 2.1207163 , 2.11777145, 2.02342038, 2.15461443,
         2.13955196, 2.22808776, 2.18022929, 2.10849704, 2.16432768,
         2.14639965, 2.16124483, 2.11018236, 2.08464181, 2.10248132,
         2.12527932, 2.10657728, 2.08488174, 2.14284489, 2.18671382,
         2.14539571, 2.079853  , 2.15980134, 2.27324934, 2.33982509,
         2.43301785, 2.62186505, 2.99968733, 3.26873387, 3.75706697,
         3.25026302, 2.27529441, 2.03195061, 1.93491741, 1.75556747,
         1.86329297, 1.89655767, 2.13985724, 2.16505325, 2.14428989,
         2.08145202, 2.19329704, 2.20784933, 2.20108216, 2.28153367,
         2.27541704, 2.19782075, 2.11942912, 1.81888196, 1.87162372,
         1.7598468 , 1.84672653, 2.08694429, 2.14235931, 2.23785505,
         2.15870862, 2.26121916, 2.31478999, 2.26939355, 2.15618801,
         2.06309372, 2.03224247, 2.00724186, 1.97382715, 1.92037258]), distances=array([-40.02499219, -39.05124838, -38.07886553, -36.87817783,
         -35.90264614, -34.71310992, -33.73425559, -32.75667871,
         -31.78049716, -30.8058436 , -29.83286778, -28.63564213,
         -27.65863337, -26.68332813, -25.49509757, -24.33105012,
         -23.34523506, -22.36067977, -21.21320344, -20.22374842,
         -19.10497317, -18.11077028, -17.11724277, -16.1245155 ,
         -15.13274595, -14.03566885, -13.03840481, -12.04159458,
         -11.04536102, -10.04987562,  -9.05538514,  -8.06225775,
          -7.        ,  -6.        ,  -5.        ,  -4.        ,
          -3.        ,  -2.        ,  -1.41421356,   0.        ,
           1.41421356,   2.82842712,   3.60555128,   4.47213595,
           5.83095189,   6.70820393,   7.61577311,   8.94427191,
          10.29563014,  11.66190379,  13.03840481,  13.60147051,
          14.2126704 ,  15.62049935,  16.2788206 ,  16.97056275,
          17.69180601,  19.10497317,  20.51828453,  21.26029163,
          22.6715681 ,  23.43074903,  24.8394847 ,  26.2488095 ,
          27.01851217,  27.80287755,  29.20616373,  30.        ,
          30.8058436 ,  31.6227766 ,  33.01514804,  33.83784863,
          34.66987165,  35.51056181,  36.35931793]), fwhm=4.470980292896586, fwhm_half_maxs=[-2.447857504061359, 2.0231227888352277, 2.8304767888297717], fwhm_peaks=[39.0, 0.0, 3.757066972693363], angles=0.0, branch_statistics=None)
# ---
# name: test_run_nodestats[rep int].1
  False
# ---
# name: test_run_nodestats[rep int].2
  dict({
    0: UnMatchedBranch(angles=0.0),
    1: UnMatchedBranch(angles=60.381078500347506),
    2: UnMatchedBranch(angles=157.36107504064498),
    3: UnMatchedBranch(angles=115.9411263075535),
  })
# ---
